tests/files/parser_tests/should_fail/102.cmdr
//Should not parse incorrect import format
import 1;